# comet

./: .clang-format  CMakeLists.txt  imgui.ini
game/: Main.cpp  imgui.ini
game/entities/: Player.cpp  Player.h
game/interfaces/: CrosshairInterface.h  RenderInterface.h  RenderMenu.h
game/objects/: cube.blend
game/shaders/: block.frag  block.vert  crosshair.frag  crosshair.vert
game/textures/: terrain_kill_me.pdn
game/world/: Block.cpp  Block.h  BlockLibrary.cpp  BlockLibrary.h  BlockProperties.h  Chunk.cpp  Chunk.h  ChunkDecorator.h  ChunkGenerator.h  World.cpp  World.h  WorldConfig.h
libraries/glad/include/glad/: gl.h
libraries/imgui/source/: imgui_impl_glfw.cpp
libraries/stb_image/include/: stb_image.h
libraries/zlib/lib/: zlibstatic.lib  zlibstaticd.lib
source/: Camera.cpp  Camera.h  DebugInfo.cpp  DebugInfo.h  DebugInfoUI.h  Engine.cpp  Engine.h  Renderer.cpp  Renderer.h  Timer.cpp  Timer.h  comet.pch
source/comet/: Engine.cpp  Engine.h  Timer.cpp  Timer.h
source/comet/handlers/: Entity.h  EntityHandler.cpp  ErrorHandler.cpp  ErrorHandler.h  EventHandler.cpp  EventHandler.h  KeyboardHandler.cpp  KeyboardHandler.h  MouseHandler.cpp  MouseHandler.h  WindowHandler.cpp  WindowHandler.h
source/handlers/: Entity.h  EntityHandler.cpp  EntityHandler.h  ErrorHandler.cpp  ErrorHandler.h  EventHandler.cpp  EventHandler.h  Interface.h  InterfaceHandler.h  KeyboardHandler.cpp  KeyboardHandler.h  MouseHandler.cpp  MouseHandler.h  WindowHandler.cpp  WindowHandler.h
source/render/: Camera.cpp  Camera.h  DebugInfoUI.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  TextureMap.cpp  TextureMap.h  Vertex.cpp  Vertex.h
source/render/containers/: Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  TextureMap.cpp  TextureMap.h  Vertex.cpp  Vertex.h
source/render/shaders/: basic.frag  basic.vert
utilities/: SingletonStructure.txt  findings.txt  todo.txt
